--- a/public_html/assets/css/main.scss
+++ b/public_html/assets/css/main.scss
@@ -20,7 +20,6 @@ html,
 body {
 	font-size: 10px;
 	width: 100%;
-	height: 100%;
 	margin: 0px;
 	padding: 0px;
 }
@@ -63,10 +62,11 @@ main {
 	width: 100%;
 	overflow-y: scroll;
 	padding: 3rem 2rem;
-	display: grid;
+	display: flex;
+	flex-direction: column-reverse;
 	gap: 1.6rem;
 	z-index: 99;
-	max-height: 70vh;
+	max-height: 55rem;
 }
 
 .main__message {
@@ -90,6 +90,7 @@ main {
 .main__input-group {
 	display: flex;
 	background: #fff;
+	border-top: 1px solid $border-color;
 }
 .main__input {
 	width: 100%;
@@ -106,9 +107,30 @@ main {
 	padding: 1.6rem 2rem 2.4rem;
 	z-index: 99;
 	border-radius: 0 0 1.6rem 1.6rem;
+	border-top: 1px solid $border-color;
+	font-size: 1.4rem;
+	color: $gray;
 }
 .button__submit {
 	background: none;
 	border: none;
 	cursor: pointer;
+	padding: 1.2rem 2rem;
+}
+
+//custom scroollbar
+
+.main__chat::-webkit-scrollbar {
+	width: 1.4rem;
+}
+.main__chat::-webkit-scrollbar-track {
+	background-color: white;
+	border-top-right-radius: 0.8rem;
+}
+
+.main__chat::-webkit-scrollbar-thumb {
+	background-color: $scrollbar-color;
+	height: 4rem;
+	border-radius: 2rem;
+	border: 0.4rem solid white;
 }
